--- a/index.html
+++ b/index.html
@@ -233,9 +233,9 @@
     <footer class="footer-sec">
       <div class="footer-div">
         <p class="footer-para">© 2025 Abdallah Daradkeh. All rights reserved</p>
-        <!-- <a href="https://www.linkedin.com/in/abdallah-daradkeh-847b8a266/"
+        <a href="https://www.linkedin.com/in/abdallah-daradkeh-847b8a266/"
         ><i class="bi bi-linkedin"></i
-      ></a> -->
+      ></a>
       </div>
      
     </footer>
