Prevent contact from hide

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
       });
       
       if (response.ok) {
-        form.style.display = 'none'; // Hide the form
+        // form.style.display = 'none'; // Hide the form
         successMessage.style.display = 'block'; // Show success message
         form.reset(); // Clear the form
       } else {
