--- a/index.html
+++ b/index.html
@@ -264,8 +264,8 @@
         throw new Error('Form submission failed');
       }
     } catch (error) {
-      alert('There was a problem sending your message. Please try again.');
-    }
+    //alert('There was a problem sending your message. Please try again.');
+     }
   });
    </script>
 
