Resume and Hire me button

--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
           innovative solutions tailored to various business needs. Let me know
           if you'd like any refinements!
         </p>
+        <div class="hire-me-btn-container">
+          <a class="btn" href="#contact">Hire me</a>
+          <a class="btn" href="https://docs.google.com/document/d/1P1_RNBrgQUns6Fq-A8IvibS7mJjPTAMiTNoSCUU8kIk/edit?usp=drive_link">My Resume</a>
+
+          
+        </div>
       </div>
       <div class="about-img">
         <img
