--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </p>
         <div class="hire-me-btn-container">
           <a class="btn" href="#contact">Hire me</a>
-          <a class="btn" href="https://docs.google.com/document/d/1P1_RNBrgQUns6Fq-A8IvibS7mJjPTAMiTNoSCUU8kIk/edit?usp=drive_link">My Resume</a>
+          <a class="btn" href="https://docs.google.com/document/d/1P1_RNBrgQUns6Fq-A8IvibS7mJjPTAMiTNoSCUU8kIk/edit?usp=sharing">My Resume</a>
 
           
         </div>
