--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Abdallah Daradkeh | Portfolio</title>
     <link rel="stylesheet" href="style.css" />
+    <!-- <link rel="stylesheet" href="styleresponsive.css" /> -->
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
   </head>
  
@@ -66,7 +69,7 @@
         />
       </div>
     </section>
-    <div class="about-contact-para">
+    <!-- <div class="about-contact-para">
       <p>
         Connect with me :
 
@@ -74,7 +77,7 @@
           ><i class="bi bi-linkedin"></i
         ></a>
       </p>
-    </div>
+    </div> -->
 
     <section class="about-me-sec" id="about-me">
       <div class="programmer-img">
@@ -195,6 +198,20 @@
     </section>
     <div class="border"></div>
 
+    <section id="skills" class="skills-sec">
+      
+      <p class="skills-para-head">My Skills</p>
+
+      <div>
+        <span class="technologies-card-skill">HTML</span>
+        <span class="technologies-card-skill">Css</span>
+        <span class="technologies-card-skill">JavaScript</span>
+        <span class="technologies-card-skill">ASP.NET</span>
+      </div>
+
+    </section>
+    <div class="border"></div>
+
     <section class="contact-sec" id="contact">
       <div>
         <p class="contact-para">Let's Connect</p>
@@ -239,7 +256,7 @@
     <footer class="footer-sec">
       <div class="footer-div">
         <p class="footer-para">© 2025 Abdallah Daradkeh. All rights reserved</p>
-        <a href="https://www.linkedin.com/in/abdallah-daradkeh-847b8a266/"
+        <a href="https://jo.linkedin.com/in/abdallah-daradkeh-847b8a266"
         ><i class="bi bi-linkedin"></i
       ></a>
       </div>
