change skills label, add new skills, add animations

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
       <p class="skills-para-head">My Skills</p>
 
       <div class="skill-collection">
-        <span class="technologies-card-skill">HTML</span>
+        <span class="technologies-card-skill">HTML CSS JS</span>
         <span class="technologies-card-skill">Css</span>
         <span class="technologies-card-skill">JavaScript</span>
         <span class="technologies-card-skill">ASP.NET</span>
