Add new Picture

--- a/index.html
+++ b/index.html
@@ -110,8 +110,10 @@
         <img
 
           class="animate__animated animate__zoomIn personal-img"
-          src="WIN_20220526_11_14_36_Pro.jpg"
+          src="ProImage.jpg"
           alt="Personal image"
+          width="325"
+          height="450"
         />
       </div>
     </section>
