--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
         <img
 
           class="animate__animated animate__zoomIn personal-img"
-          src="ProImage.jpg"
+          src="undraw_programming_65t2.png"
           alt="Personal image"
-          width="325"
+          width="525"
           height="450"
         />
       </div>
