Change resume url

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <a class="animate__animated animate__zoomIn btn" href="#contact">Hire me</a>
           <a
             class="animate__animated animate__zoomIn btn"
-            href="https://docs.google.com/document/d/1P1_RNBrgQUns6Fq-A8IvibS7mJjPTAMiTNoSCUU8kIk/edit?usp=sharing"
+            href="https://drive.google.com/file/d/1pKwZa8nZTW0IEc4xAobfsDJAWCIK-OPv/view?usp=sharing"
             >My Resume</a
           >
         </div>
@@ -110,11 +110,12 @@
         <img
 
           class="animate__animated animate__zoomIn personal-img"
-          src="undraw_programming_65t2.png"
+          src="Ad__7_-removebg-preview.png"
           alt="Personal image"
           width="525"
           height="450"
         />
+        <!-- <p class="tagline" style="font-size: 50px;">Software Developer</p> -->
       </div>
     </section>
     <!-- <div class="about-contact-para">
@@ -178,6 +179,25 @@
     <section class="projects" id="projects">
       <h3 class="project-title-sec-head">My Projects</h3>
       <div class="project-card-container">
+         <div class="project-card">
+          <a href="https://movie-maker-3e8a6f.netlify.app/">
+          <img
+            class="project-img"
+            src="Screenshot 2025-04-04 195158.png"
+            alt="Portfolio Project"
+          />
+          <div class="project-content">
+            <h4 class="project-head">
+              Movie Maker <span class="technologies-card">React</span>
+              <span class="technologies-card">React Bootstrap</span>
+              <span class="technologies-card">CSS</span>
+            </h4>
+            <p class="project-para"> 
+              A front-end movie maker website using React & React Bootstrap & CSS where I used Site web API to get the movies data I want to preview
+            </p>
+          </div>
+          </a>
+        </div>
         <div class="project-card">
           <img
             class="project-img"
