--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
           <a href="https://movie-maker-3e8a6f.netlify.app/">
           <img
             class="project-img"
-            src="Screenshot 2025-04-04 195158.png"
-            alt="Portfolio Project"
+            src="movie-maker-web-snapshot.png"
+            alt="Movie Maker Project"
           />
           <div class="project-content">
             <h4 class="project-head">
@@ -198,7 +198,9 @@
           </div>
           </a>
         </div>
+        
         <div class="project-card">
+<a href="https://abdallahd4radkeh.netlify.app/">
           <img
             class="project-img"
             src="Screenshot 2025-04-04 195158.png"
@@ -215,6 +217,7 @@
               professional related information
             </p>
           </div>
+        </a>
         </div>
 
         <div class="project-card">
