adjust project cards dimensions

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           />
           <div class="project-content">
             <h4 class="project-head">
-              Movie Maker <span class="technologies-card">React</span>
+             <span class="para-title">Movie Maker</span><span class="technologies-card">React</span>
               <span class="technologies-card">React Bootstrap</span>
               <span class="technologies-card">CSS</span>
             </h4>
@@ -208,7 +208,7 @@
           />
           <div class="project-content">
             <h4 class="project-head">
-              My Portfolio <span class="technologies-card">HTML</span>
+              <span class="para-title">My Portfolio</span> <span class="technologies-card">HTML</span>
               <span class="technologies-card">CSS</span>
             </h4>
             <p class="project-para">
