--- a/index.html
+++ b/index.html
@@ -179,6 +179,33 @@
     <section class="projects" id="projects">
       <h3 class="project-title-sec-head">My Projects</h3>
       <div class="project-card-container">
+          <div class="project-card">
+          <!-- <a href="https://movie-maker-3e8a6f.netlify.app/"> -->
+          <img
+            class="project-img"
+            src="complaint-system-snap-last.png"
+            alt="Movie Maker Project"
+          />
+          <div class="project-content">
+            <h4 class="project-head">
+             <span class="para-title">Complaint System</span><span class="technologies-card">ASP.NET</span>
+              <span class="technologies-card">MVC</span>
+              <span class="technologies-card">HTML</span>
+              <span class="technologies-card">CSS</span>
+              <span class="technologies-card">JS</span><br><br>
+              <span class="technologies-card">Bootstrap</span>
+
+
+
+            </h4>
+            <p class="project-para"> 
+              Full Stack Complaint System for HTU university, provide idea accepted by the university and contiue to work on by the university technical staff
+            </p>
+          </div>
+          <!-- </a> -->
+        </div>
+        
+
          <div class="project-card">
           <a href="https://movie-maker-3e8a6f.netlify.app/">
           <img
@@ -228,7 +255,11 @@
           />
           <div class="project-content">
             <h4 class="project-head">
-              Clinic System <span class="technologies-card">ASP.NET MVC</span>
+              <span class="para-title">Clinic System</span> <span class="technologies-card">ASP.NET MVC</span>
+               <span class="technologies-card">HTML</span>
+              <span class="technologies-card">CSS</span>
+              <span class="technologies-card">JS</span><br><br>
+              <span class="technologies-card">Bootstrap</span>
             </h4>
 
             <p class="project-para">
@@ -237,6 +268,30 @@
               user based on his role
             </p>
           </div>
+        </div>
+        
+        <div class="project-card">
+          <a href="https://iinnstagram-cloneeee-abd40291.netlify.app/">
+          <img
+            class="project-img"
+            src="instagramsnapshot.png"
+            alt="Instagram Clone"
+          />
+
+          <div class="project-content">
+            <h4 class="project-head">
+              <span class="para-title">Instagram Clone</span>
+               <span class="technologies-card">HTML</span>
+              <span class="technologies-card">CSS</span>
+              <span class="technologies-card">JS</span>
+              <span class="technologies-card">Bootstrap</span>
+            </h4>
+
+            <p class="project-para">
+              Instagram Clone, using two APIs, one for posts, and the other for images
+            </p>
+          </div>
+          </a>
         </div>
       </div>
     </section>
