add new optimized instagram

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         </div>
         
         <div class="project-card">
-          <a href="https://innssttaagram-iinssttaggram-6b6f97.netlify.app/">
+          <a href="https://instgramxclone.netlify.app/">
           <img
             class="project-img"
             src="instagramsnapshot.png"
@@ -288,7 +288,7 @@
             </h4>
 
             <p class="project-para">
-              Instagram Clone, using two APIs, one for posts, and the other for images. Optimized using lazy loading,preloading techniques, and currently implemented other advanced optimization techniques are going on.
+              Instagram Clone, Enhance its performance from 25% until it becomes 97% using two APIs, one for posts, and the other for images. Optimized using lazy loading,preloading techniques, and Intersection Observer API. I added Swapping Images feature, which lazy preloading enhance the user experience for it a lot.
             </p>
           </div>
           </a>
